# OpenStudio

./: CMakeLists.txt
developer/ruby/: make_extern_templates.rb
openstudiocore/: CMakeLists.txt  ProjectMacros.cmake
openstudiocore/resources/: CMakeLists.txt
openstudiocore/resources/espr/: listing.txt
openstudiocore/resources/model/: OpenStudio.idd
openstudiocore/src/airflow/: CMakeLists.txt  SurfaceNetworkBuilder.cpp  SurfaceNetworkBuilder.hpp
openstudiocore/src/analysis/: Algorithm.cpp  Algorithm.hpp  AlgorithmOptions.cpp  AlgorithmOptions.hpp  Analysis.cpp  Analysis.hpp  AnalysisObject.cpp  AnalysisObject.hpp  BetaDistribution.cpp  BetaDistribution.hpp  BinomialDistribution.cpp  BinomialDistribution.hpp  ContinuousVariable.cpp  ContinuousVariable.hpp  DDACEAlgorithm.cpp  DDACEAlgorithm.hpp  DDACEAlgorithmOptions.cpp  DDACEAlgorithmOptions.hpp  DakotaAlgorithm.cpp  DakotaAlgorithm.hpp  DakotaAlgorithmOptions.cpp  DakotaAlgorithmOptions.hpp  DakotaParametersFile.cpp  DakotaParametersFile.hpp  DataPoint.cpp  DataPoint.hpp  DesignOfExperiments.cpp  DesignOfExperiments.hpp  DesignOfExperimentsOptions.cpp  DesignOfExperimentsOptions.hpp  (+90 more)
openstudiocore/src/espr/: CMakeLists.txt  ESPR.i  ESPRAPI.hpp  ESPRToIdf.cpp  Espr3d.cpp  Espr3d.h  EsprDef.cpp  EsprDef.h  EsprHot3000.h  ForwardTranslator.cpp  ForwardTranslator.hpp  MapEnvelope.cpp  MapSchedules.cpp  ReverseTranslator.cpp  ReverseTranslator.hpp  RootEnvironment.cpp  RootEnvironment.h  TBuilding.cpp  TBuilding.h  TConstruction.cpp  TConstruction.h  TESPR.cpp  TESPR.h  TFileUtilities.cpp  TFileUtilities.h  TGlazing.cpp  TGlazing.h  TLightswitch.cpp  TLightswitch.h  TMaterial.cpp  TMaterial.h  TMultiParametricSimulation.cpp  TMultiParametricSimulation.h  TSimWizard.cpp  TSimWizard.h  TStringify.cpp  TStringify.h  TSurface.h  TVertex.h  TZone.cpp  (+8 more)
openstudiocore/src/espr/Test/: ESPRFixture.cpp  ESPRFixture.hpp  ForwardTranslator_GTest.cpp  ReverseTranslator_GTest.cpp
(+1981 files in other folders)
